--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,11 +4,10 @@ on:
   pull_request_target:
     types:
       - labeled
-  workflow_dispatch:
 
 jobs:
   pr-pull:
-    if: ${{ github.event_name == 'workflow_dispatch' }} || contains(github.event.pull_request.labels.*.name, 'pr-pull')
+    if: contains(github.event.pull_request.labels.*.name, 'pr-pull')
     runs-on: ubuntu-22.04
     permissions:
       contents: write
@@ -30,7 +29,7 @@ jobs:
         uses: Homebrew/actions/git-try-push@master
         with:
           token: ${{ github.token }}
-          branch: main
+          branch: master
 
       - name: Delete branch
         if: github.event.pull_request.head.repo.fork == false
