ci: disable syntax check because brew sucks
Closes #8.

Signed-off-by: Chen Asraf <contact@casraf.dev>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
 
       - run: brew test-bot --only-setup
 
-      - run: brew test-bot --only-tap-syntax
+      # - run: brew test-bot --only-tap-syntax
 
       - run: brew test-bot --only-formulae
         if: github.event_name == 'pull_request'
@@ -38,4 +38,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bottles_${{ matrix.os }}
-          path: '*.bottle.*'
+          path: "*.bottle.*"
