--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,9 @@ jobs:
 
       - run: brew test-bot --only-setup
 
-      # - run: brew test-bot --only-tap-syntax
+      - run: |
+          rm -rf scripts
+          brew test-bot --only-tap-syntax
 
       - run: brew test-bot --only-formulae
         if: github.event_name == 'pull_request'
