--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,15 @@ jobs:
       contents: write
       pull-requests: write
     steps:
+      - name: Wait for tests to succeed
+        uses: lewagon/wait-on-check-action@v1.3.4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          check-regexp: 'test-bot.*'
+          repo-token: ${{ github.token }}
+          wait-interval: 30
+          allowed-conclusions: success
+
       - name: Set up Homebrew
         uses: Homebrew/actions/setup-homebrew@master
 
