build: fully automated release

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,11 +3,12 @@ name: brew pr-pull
 on:
   pull_request_target:
     types:
-      - labeled
+      - opened
+      - synchronize
+      - reopened
 
 jobs:
   pr-pull:
-    if: contains(github.event.pull_request.labels.*.name, 'pr-pull')
     runs-on: ubuntu-22.04
     permissions:
       contents: write
