--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,12 +3,11 @@ name: brew pr-pull
 on:
   pull_request_target:
     types:
-      - opened
-      - synchronize
-      - reopened
+      - labeled
 
 jobs:
   pr-pull:
+    if: contains(github.event.pull_request.labels.*.name, 'pr-pull')
     runs-on: ubuntu-22.04
     permissions:
       contents: write
